# word2vec-pytorch

./: .gitignore  LICENSE  pyproject.toml
word2vec/: data.py  model.py  tokenizer.py  trainer.py  util.py
