[tool.poetry]
name = "word2vec"
version = "0.1.0"
description = ""
authors = ["Hunter Heidenreich <hheidenreich@g.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tokenizers = "^0.15.2"
datasets = "^2.18.0"
torch = "^2.2.1"
tqdm = "^4.66.2"
tensorboard = "^2.16.2"
tensorboardx = "^2.6.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
